--- a/.github/workflows/ethereum.yaml
+++ b/.github/workflows/ethereum.yaml
@@ -20,9 +20,12 @@ jobs:
       - name: Set up Helm
         uses: azure/setup-helm@v3
         with:
+          token: ${{ secrets.GITHUB_TOKEN }}
           version: 'latest'
   
       - name: Helm Lint
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           helm lint kustomize/dev/ethereum/charts/ethereum
 
