--- a/kustomize/dev/ethereum/charts/ethereum/values.yaml
+++ b/kustomize/dev/ethereum/charts/ethereum/values.yaml
@@ -2,10 +2,10 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 1
-
-image:
-  repo: ethereum/client-go
-  tag: v1.13.8
-  pullPolicy: IfNotPresent
+execution:
+  replicas: 1
+  image:
+    repo: ethereum/client-go
+    tag: v1.13.8
+    pullPolicy: IfNotPresent
   
