fix: engine api endpoint listening addr - add missing listening address 0.0.0.0 to geth-start.sh - remove redundant namespace base

--- a/kustomize/dev/ethereum/charts/ethereum/templates/configmap-node.yaml
+++ b/kustomize/dev/ethereum/charts/ethereum/templates/configmap-node.yaml
@@ -11,6 +11,7 @@ data:
     --gcmode full \
     --sepolia \
     --port 30303 \
+    --authrpc.addr 0.0.0.0 \
     --authrpc.jwtsecret /jwt/jwt.hex \
     --authrpc.port 8551 \
     --authrpc.vhosts "*" \
