fix: name components after their ethereum purpose, not client software

--- a/kustomize/dev/ethereum/charts/ethereum/templates/configmap-node.yaml
+++ b/kustomize/dev/ethereum/charts/ethereum/templates/configmap-node.yaml
@@ -30,7 +30,7 @@ data:
     --http.api "eth,net,web3" \
     --ws.api "eth,net,web3" \
     --discv5
-  lighthouse-start.sh: |
+  consensus-start.sh: |
     #!/bin/sh
     lighthouse beacon \
     --network sepolia \
